# snap_cam

./: .gitignore  CMakeLists.txt  NOTATION.md  README.md  package.xml
include/: GPS.h  SnapCam.h  callback.h  camera_client.h  camera_server.h  coordinate.h  main.h  node.h  sensorParams.h  snapcam.h  socket_io.h  transform.h  types.h  utils.h
launch/: down.launch  forward.launch  front.launch  highres.launch  main.launch  optflow.launch  optic.launch
libcamera/: CMakeLists.txt
libcamera/test/: CMakeCache.txt  Makefile  cam_test  camera_test.cpp  cmake_install.cmake
src/: GPS.cc  SnapCam.cpp  callback.cc  camera_client.cc  camera_server.cc  image_saver.cc  image_saver.h  main.cc  main.cpp  metadata_logger.cc  metadata_logger.h  node.cc  node.h  odometry_buffer.cc  odometry_buffer.h  odometry_message_handler.cc  odometry_message_handler.h  snap_cam.cc  snap_cam.h  snap_cam_publisher_node.cpp  snapcam.cc
src/nodes/: snap_cam_publisher_node.cpp
