<?xml version="1.0"?>
<package>
  <name>snap_cam</name>
  <version>0.0.0</version>
  <description>Radionavlab SnapCam</description>

  <maintainer email="thaydon@utexas.edu">Tucker Haydon</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libopencv-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>gbx_ros_bridge_msgs</build_depend>
  <build_depend>mg_msgs</build_depend>

  <run_depend>libopencv-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gbx_ros_bridge_msgs</run_depend>
  <run_depend>mg_msgs</run_depend>

  <export>
  </export>
</package>
